# hssqlppp

./: .gitignore  Makefile  autorules.mk  stack.yaml  todo
build-extras/: MakeDefaultTemplate1Catalog.lhs  hssqlppp-build-extras.cabal
examples/: FixSqlServerTpchSyntax.lhs  GroomUtils.lhs  Lex.lhs  MakeSelect.lhs  Parse2.lhs  Parse3.lhs  QQ.lhs  Reformat.lhs  ShowCatalog.lhs  TypeCheck.lhs  TypeCheck2.lhs  TypeCheck3.lhs  TypeCheckDB.lhs  hssqlppp-examples.cabal
hssqlppp/: hssqlppp.cabal
hssqlppp-pg/: hssqlppp-pg.cabal
hssqlppp-th/: hssqlppp-th.cabal
hssqlppp-th/src/Database/HsSqlPpp/: Quote.lhs
hssqlppp-th/tests/Database/HsSqlPpp/Tests/: QuasiQuoteTests.lhs
hssqlppp/src/Database/HsSqlPpp/: Ast.lhs  Catalog.lhs  Dialect.lhs  Lex.lhs  Parse.lhs  Parser.lhs  Pretty.lhs  Syntax.lhs  TypeCheck.lhs  Utility.lhs
hssqlppp/src/Database/HsSqlPpp/Dialects/: DefaultTSQLCatalog.lhs  DefaultTemplate1Catalog.lhs  OdbcCatalog.lhs
hssqlppp/src/Database/HsSqlPpp/Internals/: AstInternal.ag  AstInternal.hs  Dialect.lhs  LexInternal.lhs  ParseInternal.lhs  ParserInternal.lhs  PrettyInternal.lhs  TypesInternal.lhs
hssqlppp/src/Database/HsSqlPpp/Internals/Catalog/: CatalogBuilder.lhs  CatalogInternal.lhs  CatalogTypes.lhs  CatalogUtils.lhs  (+3 more)
hssqlppp/src/Database/HsSqlPpp/Parsing/: ParserInternal.lhs
hssqlppp/src/Database/HsSqlPpp/Utils/: Utils.lhs
hssqlppp/tests/Database/HsSqlPpp/Tests/: TestTypes.lhs  TestUtils.lhs
hssqlppp/tests/Database/HsSqlPpp/Utils/: GroomUtils.lhs
postprocess-uuagc/: hssqlppp-postprocess-uuagc.cabal
website-source/: examples.asciidoc
(+41 files in other folders)
